@@ -3414,6 +3414,98 @@ expr_stmt|;
 block|}
 if|if
 condition|(
+name|mrid
+operator|.
+name|getBranch
+argument_list|()
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|mrid
+operator|.
+name|getBranch
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|Message
+operator|.
+name|error
+argument_list|(
+literal|"\t"
+operator|+
+name|getName
+argument_list|()
+operator|+
+literal|": bad branch name found in "
+operator|+
+name|ivyRef
+operator|.
+name|getResource
+argument_list|()
+operator|+
+literal|": expected='"
+operator|+
+name|mrid
+operator|.
+name|getBranch
+argument_list|()
+operator|+
+literal|" found='"
+operator|+
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+operator|+
+literal|"'"
+argument_list|)
+expr_stmt|;
+name|errors
+operator|.
+name|append
+argument_list|(
+literal|"bad module name: expected='"
+operator|+
+name|mrid
+operator|.
+name|getBranch
+argument_list|()
+operator|+
+literal|"' found='"
+operator|+
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+operator|.
+name|getBranch
+argument_list|()
+operator|+
+literal|"'; "
+argument_list|)
+expr_stmt|;
+name|ok
+operator|=
+literal|false
+expr_stmt|;
+block|}
+if|if
+condition|(
 name|ivyRef
 operator|.
 name|getRevision
