@@ -21680,6 +21680,68 @@ argument_list|(
 operator|new
 name|File
 argument_list|(
+literal|"test/repositories/badfile/ivys/ivy-badbranch.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"bad branch should have raised an error in report"
+argument_list|,
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|StringUtils
+operator|.
+name|join
+argument_list|(
+name|report
+operator|.
+name|getAllProblemMessages
+argument_list|()
+operator|.
+name|toArray
+argument_list|()
+argument_list|,
+literal|"\n"
+argument_list|)
+operator|.
+name|indexOf
+argument_list|(
+literal|"'badbranch'"
+argument_list|)
+operator|!=
+operator|-
+literal|1
+argument_list|)
+expr_stmt|;
+name|report
+operator|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
 literal|"test/repositories/badfile/ivys/ivy-badrevision.xml"
 argument_list|)
 operator|.
